Save changes idk

--- a/TempoWithGUI.csproj
+++ b/TempoWithGUI.csproj
@@ -777,6 +777,9 @@
     <Compile Include="MVVM\View\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\View\MassDM.xaml.cs">
+      <DependentUpon>MassDM.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MVVM\View\RaidView\GuildRaid.xaml.cs">
       <DependentUpon>GuildRaid.xaml</DependentUpon>
     </Compile>
@@ -836,6 +839,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\View\Login.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\MassDM.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
