--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="AngleSharp" version="0.14.0" targetFramework="net471" />
   <package id="Leaf.xNet" version="5.2.10" targetFramework="net471" />
   <package id="libsodium" version="1.0.18" targetFramework="net471" />
+  <package id="log4net" version="2.0.12" targetFramework="net471" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net471" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net471" />
   <package id="Microsoft.CognitiveServices.Speech" version="1.18.0" targetFramework="net471" />
