--- a/App.config
+++ b/App.config
@@ -44,7 +44,7 @@
   <userSettings>
     <TempoWithGUI.Settings>
       <setting name="Token" serializeAs="String">
-        <value>ODkyMTk1ODU4NzgxNzMyODY0.YVJYQA.-Kl-1kTLOo89GlyFfJPBUIWy6gk</value>
+        <value />
       </setting>
       <setting name="OwnerId" serializeAs="String">
         <value>765627843614736385</value>
@@ -68,10 +68,10 @@
         <value>it-IT-DiegoNeural</value>
       </setting>
       <setting name="tk1" serializeAs="String">
-        <value>Bombo</value>
+        <value />
       </setting>
       <setting name="tk2" serializeAs="String">
-        <value>1234AbCd0</value>
+        <value />
       </setting>
       <setting name="Fingerprint" serializeAs="String">
         <value />
